apollo/single/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apollo
  labels:
    app: apollo
spec:
  selector:
    matchLabels:
      app: apollo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: apollo
    spec:
      containers:
        - image: apollo-standalone:v1.0.0
          name: apollo
          ports:
            - containerPort: 8070
              name: apollo-portal
            - containerPort: 8080
              name: apollo-config
            - containerPort: 8090
              name: apollo-admin
