apollo/single/service.yml
apiVersion: v1
kind: Service
metadata:
  name: apollo
  labels:
    app: apollo
spec:
  ports:
    - port: 8070
      name: apollo-portal
    - port: 8080
      name: apollo-config
    - port: 8090
      name: apollo-admin
  selector:
    app: apollo
