apollo/single/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apollo-ingress
spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            backend:
              serviceName: apollo
              servicePort: 8070
